<resources>
    <string name="app_name">Running App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="write_some">Write something...</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="steps">Steps</string>
    <string name="home">Home</string>
    <string name="tracking">Tracking activity</string>
    <string name="tracking_bottom_nav">Tracking</string>
    <string name="profile">Profile</string>
    <string name="activities">Activities</string>

    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="settings_nav_header">Settings</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_theme_header">Theme settings</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_notifications_header">Notifications settings</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_privacy_header">Privacy settings</string>
    <string name="setting_back_to_profile">Back to profile</string>
    <string name="theme_header">Change app theme</string>
    <string name="notifications_header">Change notification preferences</string>
    <string name="privacy_header">Change privacy</string>
    <string name="share_act_header">Share your activity</string>
    <string name="night_theme">Night theme</string>
    <string name="new_comment">New comment</string>
    <string name="new_like">New like</string>
    <string name="friend_req">Friendship request</string>
    <string name="accept_friend_req">Accepted friendship</string>
    <string name="act_invite">Activity invitation</string>
    <string name="accept_act_invite">Accepted activity invitation</string>
    <string name="canceled_act">Canceled activity</string>
    <string name="pers_info">Personal information</string>
    <string name="shared_act">Shared activities</string>
    <string name="goals">Goals</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_find_friends">Find Friends</string>
    <string name="title_activity_view_friend">ViewFriend</string>
    <string name="title_activity_friend_detail">FriendDetailActivity</string>
    <string name="group_activitie">Group activities</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="delete">Delete</string>
    <string name="title_activity_menage_goals">MenageGoals</string>
    <string name="title_activity_select_place">SelectPlaceActivity</string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="access_token">\"pk.eyJ1IjoicG1hMjAyMCIsImEiOiJja2M2OHd2MWMwOTRpMnZueDQ3ejhnbTZlIn0.62gLuTCl6gOrhxzN_EbYng\"</string>
    <string name="selected_place_info" />

</resources>
