<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_option"
            android:title="@string/setting_back_to_profile"
            android:visible="false"
            android:icon="@drawable/ic_arrow_back24dp"/>
        <item android:id="@+id/theme"
            android:icon="@drawable/ic_theme_24dp"
            android:title="@string/setting_theme"/>
        <item android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/setting_notifications"/>
        <item android:id="@+id/privacy"
            android:icon="@drawable/ic_person_24dp"
            android:title="@string/setting_privacy"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_24dp"
            android:title="@string/logout"/>
    </group>

</menu>