<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.ui.fragments.NotificationsSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/notifications_header"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp">
            <Switch
                android:id="@+id/new_comment_switch"
                android:theme="@style/SwitchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_comment"
                android:layout_marginStart="20dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp">
            <Switch
                android:id="@+id/new_like_switch"
                android:theme="@style/SwitchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_like"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp">
            <Switch
                android:id="@+id/friend_req_switch"
                android:theme="@style/SwitchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_req"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp">
            <Switch
                android:id="@+id/accept_friend_req_switch"
                android:theme="@style/SwitchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_friend_req"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp">
            <Switch
                android:id="@+id/act_invite_switch"
                android:theme="@style/SwitchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_invite"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp">
            <Switch
                android:id="@+id/accept_act_invite_switch"
                android:theme="@style/SwitchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_act_invite"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp">
            <Switch
                android:id="@+id/canceled_act_switch"
                android:theme="@style/SwitchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canceled_act"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:id="@+id/notification_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>