<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            android:id="@+id/toolbar"
            android:elevation="4dp">
            <TextView
                android:id="@+id/toolbar_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracking"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/distance_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="90dp"
                android:background="#c0c0c0"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/duration_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="90dp"
                android:background="#c0c0c0"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/steps_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <org.osmdroid.views.MapView
            android:id="@+id/tracking_map"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:focusable="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:background="@drawable/round_button"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:layout_marginStart="40dp"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

<com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/primary"
    app:itemIconTint="@color/white"
    app:itemTextColor="@color/white"
    app:menu="@menu/bottom_navigation_menu" />

</FrameLayout>